[gd_scene load_steps=55 format=3 uid="uid://b8dxip802xvkv"]

[ext_resource type="Script" path="res://scenes/npc/boss/razwel_final_boss.gd" id="1_wcc4s"]
[ext_resource type="PackedScene" uid="uid://b53ha8dmm87u8" path="res://scenes/npc/boss/shotgun_ball.tscn" id="2_n6784"]
[ext_resource type="Script" path="res://script/finite_state_machine.gd" id="2_vwbid"]
[ext_resource type="PackedScene" uid="uid://dnq0eenjvopr5" path="res://scenes/npc/boss/disparo_penetrante.tscn" id="3_1vivu"]
[ext_resource type="Texture2D" uid="uid://k8a25nm4ti0h" path="res://art/characters/ratzwel/ratzwel_boss_idle-Sheet.png" id="4_1mpeh"]
[ext_resource type="Texture2D" uid="uid://74njmvjia4lq" path="res://assets/monsters/MAGE/explosion_sheet.png" id="4_85dnp"]
[ext_resource type="Script" path="res://scenes/npc/boss/idle_shotgun_state.gd" id="5_0h12u"]
[ext_resource type="Script" path="res://scenes/npc/boss/shotgun_blast_state.gd" id="5_5eu33"]
[ext_resource type="Texture2D" uid="uid://bn75jnwp8ngam" path="res://art/characters/ratzwel/ratzwel_shoot_sheet.png" id="5_ojdwt"]
[ext_resource type="Texture2D" uid="uid://bi6wt6c1udtq5" path="res://art/characters/ratzwel/ratzwel_boss_walk-Sheet.png" id="5_vc3fu"]
[ext_resource type="Script" path="res://scenes/npc/boss/piercing_shot_state.gd" id="6_3ub66"]
[ext_resource type="Script" path="res://scenes/npc/boss/shotgun_chase_state.gd" id="7_lpibl"]
[ext_resource type="Script" path="res://scenes/npc/boss/shotgun_sweep_state.gd" id="7_w6nse"]
[ext_resource type="Script" path="res://scenes/npc/boss/impact_charge_state.gd" id="8_be4sm"]
[ext_resource type="Script" path="res://scenes/npc/boss/butt_strike_state.gd" id="9_1ixet"]
[ext_resource type="Script" path="res://scenes/npc/boss/crazy_shot_state.gd" id="12_ho4p7"]
[ext_resource type="AudioStream" uid="uid://db3ysj1422q4j" path="res://sound/sounds/metralleta.ogg" id="17_wxuup"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xs6ji"]
radius = 6.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uex"]
atlas = ExtResource("4_85dnp")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd2x8"]
atlas = ExtResource("4_85dnp")
region = Rect2(112, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_sal8t"]
atlas = ExtResource("4_85dnp")
region = Rect2(224, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_153ts"]
atlas = ExtResource("4_85dnp")
region = Rect2(336, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_un4mb"]
atlas = ExtResource("4_85dnp")
region = Rect2(0, 69, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv7k3"]
atlas = ExtResource("4_85dnp")
region = Rect2(112, 69, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t8g5"]
atlas = ExtResource("4_85dnp")
region = Rect2(224, 69, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8qj2"]
atlas = ExtResource("4_85dnp")
region = Rect2(336, 69, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbpfg"]
atlas = ExtResource("4_85dnp")
region = Rect2(0, 138, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmy1e"]
atlas = ExtResource("4_85dnp")
region = Rect2(112, 138, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufh8k"]
atlas = ExtResource("4_85dnp")
region = Rect2(224, 138, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_axwoc"]
atlas = ExtResource("4_85dnp")
region = Rect2(336, 138, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg1xi"]
atlas = ExtResource("4_85dnp")
region = Rect2(0, 207, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlx0v"]
atlas = ExtResource("4_85dnp")
region = Rect2(112, 207, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_702wm"]
atlas = ExtResource("4_1mpeh")
region = Rect2(0, 0, 15, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1qdt"]
atlas = ExtResource("4_1mpeh")
region = Rect2(15, 0, 15, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnl7w"]
atlas = ExtResource("4_1mpeh")
region = Rect2(30, 0, 15, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rivud"]
atlas = ExtResource("4_1mpeh")
region = Rect2(45, 0, 15, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jirt"]
atlas = ExtResource("4_1mpeh")
region = Rect2(60, 0, 15, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_q87uo"]
atlas = ExtResource("5_ojdwt")
region = Rect2(0, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaysg"]
atlas = ExtResource("5_ojdwt")
region = Rect2(16, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2iql"]
atlas = ExtResource("5_ojdwt")
region = Rect2(32, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hw4o"]
atlas = ExtResource("5_ojdwt")
region = Rect2(48, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ar4q"]
atlas = ExtResource("5_ojdwt")
region = Rect2(64, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhuek"]
atlas = ExtResource("5_ojdwt")
region = Rect2(80, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_48tuh"]
atlas = ExtResource("5_ojdwt")
region = Rect2(96, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl2ys"]
atlas = ExtResource("5_ojdwt")
region = Rect2(112, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs7u6"]
atlas = ExtResource("5_vc3fu")
region = Rect2(0, 0, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_omt8s"]
atlas = ExtResource("5_vc3fu")
region = Rect2(16, 0, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_uas1m"]
atlas = ExtResource("5_vc3fu")
region = Rect2(32, 0, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l0ao"]
atlas = ExtResource("5_vc3fu")
region = Rect2(48, 0, 16, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_xv3rr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd2x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sal8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_153ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un4mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv7k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t8g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8qj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbpfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmy1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufh8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axwoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg1xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlx0v")
}],
"loop": false,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_702wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1qdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnl7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rivud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jirt")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q87uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaysg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2iql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hw4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ar4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhuek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48tuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl2ys")
}],
"loop": true,
"name": &"shot",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs7u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omt8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uas1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l0ao")
}],
"loop": true,
"name": &"walkFront",
"speed": 9.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3adg"]
bg_color = Color(0.465194, 0.0956877, 1.44392e-07, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sn4l"]
bg_color = Color(0.756029, 0.567209, 1.92523e-07, 1)
shadow_size = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_53quf"]
radius = 11.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tpxel"]
radius = 8.0
height = 24.0

[node name="RatzwelFinalBoss" type="CharacterBody2D" node_paths=PackedStringArray("animator") groups=["BOSS"]]
collision_layer = 5
collision_mask = 3
script = ExtResource("1_wcc4s")
life = 350
animator = NodePath("AnimatedSprite2D")
projectile_scene = ExtResource("2_n6784")
piercing_projectile_scene = ExtResource("3_1vivu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_xs6ji")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xv3rr")
animation = &"idle"

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_vwbid")
state = NodePath("IdleShotgunState")

[node name="IdleShotgunState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_0h12u")
actor = NodePath("../..")

[node name="ShotgunChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("7_lpibl")
actor = NodePath("../..")

[node name="ShotgunBlastState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_5eu33")
actor = NodePath("../..")

[node name="PiercingShotState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("6_3ub66")
actor = NodePath("../..")

[node name="ShotgunSweepState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("7_w6nse")
actor = NodePath("../..")

[node name="CrazyShotState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("12_ho4p7")
actor = NodePath("../..")
shot_interval = 0.1
random_shot_duration = 5.0

[node name="ImpactChargeState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("8_be4sm")
actor = NodePath("../..")

[node name="DieRatzwelState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("9_1ixet")
actor = NodePath("../..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -39.0
offset_right = 117.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
theme_override_styles/background = SubResource("StyleBoxFlat_o3adg")
theme_override_styles/fill = SubResource("StyleBoxFlat_3sn4l")
value = 50.0

[node name="AreaEntraDaño" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEntraDaño"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_53quf")

[node name="AreaaDañoPlayer" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaaDañoPlayer"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_tpxel")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 29.0

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Voice" type="AudioStreamPlayer2D" parent="."]
volume_db = 15.086
bus = &"Sounds"

[node name="makeDamage" type="Timer" parent="."]

[node name="Shot" type="AudioStreamPlayer2D" parent="."]
bus = &"Sounds"

[node name="Metralleta" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_wxuup")
volume_db = -5.571
bus = &"Sounds"
parameters/looping = true

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="area_entered" from="AreaEntraDaño" to="." method="_on_area_entra_daño_area_entered"]
[connection signal="body_entered" from="AreaaDañoPlayer" to="." method="_on_areaa_daño_player_body_entered"]
[connection signal="body_exited" from="AreaaDañoPlayer" to="." method="_on_areaa_daño_player_body_exited"]
[connection signal="timeout" from="makeDamage" to="." method="_on_make_damage_timeout"]
